decreased min-height for page-content to avoid large spaces on small pages, replaced discourse with slack channel

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,7 @@ body {
     margin-right: auto;
 }
 body > .page-content {
-    min-height: 1000px;
+    min-height: 400px;
 }
 a {
     color: cadetblue;
